# mailtool

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  COMMANDS.md  FEATURES.md  IMPLEMENTATION_PLAN.md  PRODUCTION_UPGRADE.md  README.md  SUMMARY.md  UV_MIGRATION.md  V2_COMPLETE.md  mcp_server.py  outlook.bat  outlook.sh  pyproject.toml  pytest.ini  start-mcp-server.bat  test_complete_task.py  test_lifespan.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
archive/ai-artifacts/: README.md
archive/ai-artifacts/tasks/: prd-mcp-sdk-v2-migration.md
archive/v2.2.0-legacy/: test_mcp_server.py
scripts/benchmarks/: EXPECTED_RESULTS.md  README.md  __init__.py  performance_benchmark.py
scripts/ralph/: .gitignore  prd.json  progress.txt  prompt.md  ralph.bat  ralph.ps1  ralph.sh
src/: mailtool_outlook_bridge.py
src/mailtool/: bridge.py  cli.py
src/mailtool/mcp/: __init__.py  com_state.py  exceptions.py  lifespan.py  models.py  resources.py  server.py
tasks/: prd-mcp-sdk-v2-migration.md
tests/: test_enhancements.py  test_tasks.py
tests/mcp/: test_exceptions.py  test_integration.py  test_models.py  test_resources.py  test_tools.py
