[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mailtool"
version = "0.9.2"
description = "Outlook automation bridge for WSL2 via COM with MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Sam", email = "s.mok@utwente.nl" }
]
keywords = ["outlook", "com", "automation", "email", "calendar", "wsl2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pywin32>=306; sys_platform == 'win32'",
    "mcp[cli]>=0.9.0",
]

[project.scripts]
mailtool = "mailtool.cli:main"
mailtool-mcp = "mailtool.mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"

line-length = 88

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "archive",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PT",    # flake8-pytest-style
    "ARG",   # flake8-unused-arguments
    "PERF",  # Perflint
    "RUF",   # Ruff-specific rules
]

ignore = [
    "E501",  # Line too long (formatter handles this)
    "PT011", # pytest.raises() too strict for our test patterns
    "ARG001", # Unused function argument common in callbacks
    "SIM108", # Ternary operator can reduce readability
]

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can have more relaxed rules
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
    "ARG",    # Allow unused arguments in test fixtures
    "PLR2004",  # Allow magic values in tests
]

# Allow specific rules in __init__.py files
"__init__.py" = [
    "F401",   # Allow unused imports (for package exports)
    "E402",   # Allow module-level imports not at top
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["mailtool"]
